# SAR-Oil-Onboard

./: .gitignore  README.md  environment.yaml  pyproject.toml
src/: main.py
src/algorithmic_segmentation/algorithms/: adaptiveOtsuSegmentation.py  adaptiveThresholdSegmentation.py  bitwiseAndSegmentation.py  cannyEdgeDetection.py  cascadedSegmentation.py  common.py  gaussianBlurForSegmentation.py  improvedOtsuSegmentation.py  normalizationForSegmentation.py  otsuSegmentation.py  segmentationMethod.py  thresholdSegmentation.py  watershedSegmentation.py
src/algorithmic_segmentation/core/: batchAlgorithmRunner.py  imageSegmentationFormat.py
src/dataset_processing/: BuildUAVSARhdr.py  chunkedSARImage.py  geoTransform.py  pngPreprocessing.py
src/datasets/: imageChip.py  imageChipCollection.py  oilSpillImage.py  sarImageDataset.py
src/datasets/images/: baseImage.py  imageXmlData.py  jpgImage.py  pngImage.py
src/models/: model.py
src/models/ResNet/: Run_ResNet_SAR.ipynb  SARImageDataset.py  Train_Bespoke_Model.py  Train_ResNet_SAR.py  baseModel.py  customModel.py  sarimagedataset.py
src/models/Segmentation/: segmentationModel.py
src/spline_extraction/: bSplineExtraction.py  coordinateSplineExtraction.py  spline.py
src/tui/: deepLearningTui.py  keyboardInputs.py  selectMenu.py  terminalSettings.py  textColors.py  tui.py  tuiCore.py
